fix dashboard consumer spacing and archive users button

--- a/assets/sass/adminPanel.scss
+++ b/assets/sass/adminPanel.scss
@@ -915,7 +915,7 @@ label {
             form {
                 button {
                     position: absolute;
-                    width: 200px;
+                    width: 150px;
                     background-color: $red;
                     border: none;
                     color: white;
@@ -923,7 +923,7 @@ label {
                     font-weight: 700;
                     height: 25px;
                     top: 25px;
-                    left: 200px;
+                    left: 250px;
                 }
             }
 
